--- a/docker/nginx/conf.d/www.my-app.local.conf
+++ b/docker/nginx/conf.d/www.my-app.local.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     index index.php index.html index;
-    server_name my-app.local www.my-app.local;
+    server_name localhost www.localhost;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/data;
